--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
+#theme: jekyll-theme-tactile
 title: "David Shapiro's Technology Blog"
 description: Documenting my technical work as well as ruminations about the current state and future of technology
