--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+#theme: jekyll-theme-slate
 title: "David Shapiro's Technology Blog"
 description: Documenting my technical work as well as ruminations about the current state and future of technology
