Set theme jekyll-theme-tactile

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 title: "David Shapiro's Technology Blog"
 description: Documenting my technical work as well as ruminations about the current state and future of technology
+
+theme: jekyll-theme-tactile
